Bug 301530 - Group images by time puts multiple images in a progress queue, which never complete
Summary: Group images by time puts multiple images in a progress queue, which never co...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ProgressManager-Batch (other bugs)
Version First Reported In: 2.6.0
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-09 20:05 UTC by Parsifal.Herzog
Modified: 2022-02-05 15:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Parsifal.Herzog 2012-06-09 20:05:47 UTC
Selecting a a set of image thumbnails, then selecting "Group Selected by Time" in the context menu, creates as many tasks as images selected entitled "Editing group", which then stay at 0% progress, and cannot be cancelled.

Reproducible: Always

Steps to Reproduce:
1. Select some images in thumnail view.
2. Select context menu "Group Selected by Time".
3. In a few moments,  detailed progress window will show multiple non-progressing "Editing group" tasks.
Actual Results:  
No images are grouped, queued tasks cannot be cancelled, when exiting digikam, "Unfinished tasks" dialog appears.

Expected Results:  
Selected images are grouped by time.

This bug appears very similar to Bug 295263, which was fixed for 2.6.0
Comment 1 Parsifal.Herzog 2012-06-10 17:53:46 UTC
With respect to bug 295263, in which also the queued tasks failed to progress, I have found that selecting an image group, changing a tag, and choosing "Apply to all versions" rather than "Apply" (where problem was fixed) results in the same non-progressing tasks behaviour. I don't know if bug 295263 should be re-opened, but thought it relevant her because the problem relates to image groups.
Comment 2 Marcel Wiesweg 2012-07-17 19:52:00 UTC
Git commit eeb0c74b385d3c220dce8fba7167644a67add6d7 by Marcel Wiesweg.
Committed on 17/07/2012 at 21:50.
Pushed by mwiesweg into branch 'master'.

Creating a task with 0 items would introduce a progress item which never finishes.
Generic fix and for the special case of group by time.

M  +2    -1    NEWS
M  +5    -0    digikam/fileaction/fileactionimageinfolist.cpp
M  +4    -1    digikam/items/digikamimageview.cpp

http://commits.kde.org/digikam/eeb0c74b385d3c220dce8fba7167644a67add6d7