Creating a task with 0 items would introduce a progress item which never finishes. Generic fix and for the special case of group by time.

BUG: 301530