digikam/fileaction/fileactionimageinfolist.cpp
@@ -35,6 +35,11 @@ namespace Digikam
 void TwoProgressItemsContainer::scheduleOnProgressItem(QAtomicPointer<ProgressItem>& ptr, int total,
                                                        const QString& action, FileActionProgressItemCreator* const creator)
 {
+    if (total <= 0)
+    {
+        return;
+    }
+
     if (!ptr)
     {
         ProgressItem* item = creator->createProgressItem(action);
